--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -1,10 +1,11 @@
 .Toolbar {
   height: 100px;
   width: 100%;
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   top: 0;
   left: 0;
-  background-color: transparent;
+  background-color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
