--- a/src/components/Navigation/Toolbar/Toolbar.scss
+++ b/src/components/Navigation/Toolbar/Toolbar.scss
@@ -1,10 +1,10 @@
 .Toolbar {
     height: 100px;
     width: 100%;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
-    background-color: transparent;
+    background-color: white;
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid black;
