--- a/src/constants/Variables.scss
+++ b/src/constants/Variables.scss
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+//Site Colors
 $primaryColor: #83f1c5;
 $secondaryColor: #83ddf1;
-$primaryColor: #83f2f1;
+$accentColor: #83f2f1;
+
+//Site Fonts
+$ubuntuFont: 'Ubuntu', sans-serif;
+
