--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 .NavigationItem {
   height: 100px;
   display: -webkit-inline-box;
@@ -5,7 +6,6 @@
   display: inline-flex;
   padding-left: 20px;
   padding-right: 20px;
-  background-color: red;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -14,6 +14,6 @@
 .NavigationItem:hover,
 .NavigationItem:active,
 .NavigationItem.active {
-  color: #83f2f1;
+  color: red;
 }
 /*# sourceMappingURL=NavigationItem.css.map */
