--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.scss
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.scss
@@ -6,14 +6,13 @@
     display: inline-flex;
     padding-left: 20px;
     padding-right: 20px;
-    background-color: red;
     align-items: center;
 }
 
 .NavigationItem:hover,
 .NavigationItem:active,
 .NavigationItem.active{
-    color: $primaryColor;
+    color: red;
    
 }
 // @media (min-width: 500px){
