--- a/src/components/Navigation/NavigationItems/NavigationItems.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 .NavigationItems {
   margin: 0 !important;
   padding: 0;
@@ -11,6 +12,11 @@
   -webkit-box-direction: normal;
       -ms-flex-flow: column;
           flex-flow: column;
+}
+
+.NavigationItems i {
+  color: #83ddf1;
+  font-size: 2rem;
 }
 
 @media (min-width: 500px) {
