--- a/src/components/Navigation/NavigationItems/NavigationItems.scss
+++ b/src/components/Navigation/NavigationItems/NavigationItems.scss
@@ -1,3 +1,5 @@
+@import '../../../constants/Variables.scss';
+
 .NavigationItems {
     margin: 0!important;
     padding: 0;
@@ -6,6 +8,11 @@
     align-items: center;
     height: 100px;
     flex-flow: column;
+}
+
+.NavigationItems i {
+    color: $secondaryColor;
+    font-size: 2rem;
 }
 
 @media (min-width: 500px){
