--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 .Toolbar {
   height: 100px;
   width: 100%;
@@ -12,24 +13,29 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  border-bottom: 1px solid black;
+  z-index: 90;
 }
 
-.Logo {
+@media (max-width: 500px) {
+  .Toolbar {
+    height: 150px;
+    display: block;
+    text-align: center;
+  }
+}
+
+.Logo, .socialIcons {
   height: 80%;
+  color: red;
+}
+
+@media (max-width: 500px) {
+  .Logo, .socialIcons {
+    height: 40%;
+  }
 }
 
 .Toolbar nav {
   height: 100%;
-}
-
-.Logo {
-  height: 80%;
-}
-
-@media (max-width: 499px) {
-  .DesktopOnly {
-    display: none;
-  }
 }
 /*# sourceMappingURL=Toolbar.css.map */
