--- a/src/components/SectionHeader/SectionHeader.css
+++ b/src/components/SectionHeader/SectionHeader.css
@@ -2,6 +2,45 @@
 .sectionContainer {
   width: 100%;
   height: 50vh;
-  background-color: #83f1c5;
+  background-image: -webkit-gradient(linear, right bottom, left top, from(#83f1c5), to(#83ddf1));
+  background-image: linear-gradient(to top left, #83f1c5, #83ddf1);
+}
+
+.sectionContent {
+  width: 70%;
+  height: 100%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-family: "Ubuntu", sans-serif;
+}
+
+h1 {
+  font-size: 50px;
+}
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 30px;
+  }
+}
+
+p {
+  font-size: 20px;
+}
+
+@media (max-width: 900px) {
+  p {
+    font-size: 15px;
+  }
 }
 /*# sourceMappingURL=SectionHeader.css.map */
