--- a/src/components/SectionHeader/SectionHeader.scss
+++ b/src/components/SectionHeader/SectionHeader.scss
@@ -3,6 +3,31 @@
 .sectionContainer{
     width: 100%;
     height: 50vh;
-    background-color: $primaryColor;
+    background-image: linear-gradient(to top left, $primaryColor, $secondaryColor);
+    
+}
 
+.sectionContent{
+    width: 70%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    font-family: $ubuntuFont;
+}
+
+h1{
+    font-size: 50px;
+    @media (max-width: 900px){
+        font-size: 30px;
+    }
+}
+
+p{
+    font-size: 20px;
+    @media (max-width: 900px){
+        font-size: 15px;
+    }
 }
