--- a/src/components/SectionHeader/SectionHeader.css
+++ b/src/components/SectionHeader/SectionHeader.css
@@ -1,9 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 .sectionContainer {
   width: 100%;
-  height: 70vh;
+  height: 50vh;
   background-image: -webkit-gradient(linear, right bottom, left top, from(#83f1c5), to(#83ddf1));
   background-image: linear-gradient(to top left, #83f1c5, #83ddf1);
+}
+
+@media (max-width: 767px) {
+  .sectionContainer {
+    height: 70vh;
+  }
 }
 
 .sectionContent {
