--- a/src/components/SectionHeader/SectionHeader.scss
+++ b/src/components/SectionHeader/SectionHeader.scss
@@ -2,9 +2,11 @@
 
 .sectionContainer{
     width: 100%;
-    height: 70vh;
+    height: 50vh;
     background-image: linear-gradient(to top left, $primaryColor, $secondaryColor);
-    
+    @media (max-width: 767px){
+        height: 70vh;
+    }
 }
 
 .sectionContent{
