--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -3,6 +3,10 @@
   width: 70vw;
   margin: 0 auto;
   font-family: "Ubuntu", sans-serif;
+  border-radius: 1rem;
+  -webkit-box-shadow: 0px 10px 30px #E6ECF8;
+          box-shadow: 0px 10px 30px #E6ECF8;
+  margin-bottom: 5rem;
 }
 
 @media (max-width: 1400px) {
