--- a/src/components/Services/Services.scss
+++ b/src/components/Services/Services.scss
@@ -8,6 +8,9 @@ $grayBorder: #E6ECF8;
     @media (max-width: 1400px){
         width: 90vw;
     }
+    border-radius: 1rem;
+    box-shadow: 0px 10px 30px $grayBorder;
+    margin-bottom: 5rem;
 }
 
 
