--- a/src/components/SectionHeader/SectionHeader.scss
+++ b/src/components/SectionHeader/SectionHeader.scss
@@ -4,8 +4,11 @@
     width: 100%;
     height: 50vh;
     background-image: linear-gradient(to top left, $primaryColor, $secondaryColor);
-    @media (max-width: 767px){
-        height: 70vh;
+    @media(max-width: 600px) and (max-height: 600px){
+        height: 100vh;
+    }
+    @media (max-width: 450px){
+        height: 65vh;
     }
 }
 
