--- a/src/components/UI/Button/Button.scss
+++ b/src/components/UI/Button/Button.scss
@@ -9,7 +9,7 @@
 }
 .button:hover {
     background-color: $primaryColor;
-    color: white;
+    color: black;
     text-decoration: none;
     transition: all .3s ease-in 0s;
 }
