--- a/src/components/Resume/Resume.scss
+++ b/src/components/Resume/Resume.scss
@@ -2,10 +2,11 @@
 
 .resumeContainer{
  width: 100vw;
- padding: 3rem;
+ padding-top: 10rem;
+ padding-bottom: 10rem;
  margin: 0 auto;
  text-align: center;
- 
+ font-family: $ubuntuFont;
 }
 
 .buttonStyle{
@@ -20,7 +21,6 @@
     @media(max-width: 600px){
         max-width: 90vw;
         margin: 0 auto;
-    
     }
 }
 
