--- a/src/components/SectionHeader/SectionHeaderBGImage/SectionHeaderBGImage.css
+++ b/src/components/SectionHeader/SectionHeaderBGImage/SectionHeaderBGImage.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 .sectionContainer {
   width: 100%;
-  height: 50vh;
+  height: 55vh;
   background-image: -webkit-gradient(linear, right bottom, left top, from(#83f1c5), to(#83ddf1));
   background-image: linear-gradient(to top left, #83f1c5, #83ddf1);
 }
@@ -58,16 +58,16 @@ p {
 }
 
 .bannerImage {
-  opacity: 0.9;
+  opacity: 1;
   background-repeat: none;
   background-size: cover;
-  background-position: top;
+  background-position: center;
 }
 
 .sectionTitleText,
 .sectionContentText,
 .sectionSubContentText {
   color: white;
-  text-shadow: 2px 2px 3px black;
+  text-shadow: 1px 1px 10px black;
 }
 /*# sourceMappingURL=SectionHeaderBGImage.css.map */
