responsiveness fixes banner/services

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -23,6 +23,9 @@
     @media(width: 1024px){
         height: 60vh;
     }
+    @media(max-height: 400px) and (max-width: 900px){
+        height: 60vh;
+    }
 }
 
 .heroText{
@@ -50,7 +53,7 @@
         font-size: 20px;
     }
     @media (min-width: 901px) and (max-width: 1024px){
-        font-size: 40px;
+        font-size: 30px;
     }
 }
 
