--- a/src/components/SectionHeader/SectionHeader.scss
+++ b/src/components/SectionHeader/SectionHeader.scss
@@ -10,6 +10,9 @@
     @media (max-width: 450px){
         height: 65vh;
     }
+    @media(max-height: 700px){
+        height: 75vh; 
+    }
 }
 
 .sectionContent{
