added transparent nav on scroll

--- a/src/components/Navigation/Toolbar/Toolbar.scss
+++ b/src/components/Navigation/Toolbar/Toolbar.scss
@@ -1,12 +1,11 @@
 @import '../../../constants/Variables.scss';
 
-.Toolbar {
+#Toolbar {
     height: 100px;
     width: 100%;
     position: sticky;
     top: 0;
-    left: 0;
-    background-color: white;
+    left: 0;    
     display: flex;
     justify-content: space-between;
     z-index: 90;
@@ -24,13 +23,6 @@
         height: 40%;
     }
 }
-.Toolbar nav {
+#Toolbar nav {
     height: 100%;
 }
-
-
-// @media (max-width: 499px){
-//     .DesktopOnly{
-//         display: none;
-//     }
-// }
