--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -14,7 +14,7 @@
 
 .icon{
     display: flex;
-    font-size: 20vw;
+    font-size: 16vw;
     justify-content: center;
     align-items: center;
     height: 100%;
@@ -55,4 +55,12 @@ textarea{
     border: none;
     font-size: 1.3rem;
     font-weight: bold;
+}
+
+.messageSuccess{
+    color: $primaryColor;
+}
+
+.messageHide{
+    display: none!important;
 }
