added React & React Native Projects

--- a/src/components/UI/Button/Button.scss
+++ b/src/components/UI/Button/Button.scss
@@ -6,6 +6,8 @@
     border-radius: 2rem;
     padding: .5rem;
     color: white;
+    margin: .2rem;
+    display: inline-block;
 }
 .button:hover {
     background-color: $primaryColor;
