--- a/src/constants/Variables.scss
+++ b/src/constants/Variables.scss
@@ -8,3 +8,8 @@ $accentColor: #83f2f1;
 //Site Fonts
 $ubuntuFont: 'Ubuntu', sans-serif;
 
+//Bootstrap 4 breakpoints
+$breakpoint-sm: 576px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 992px;
+$breakpoint-xl: 1200px;
