--- a/src/components/Projects/ProjectItems/ProjectItems.scss
+++ b/src/components/Projects/ProjectItems/ProjectItems.scss
@@ -76,7 +76,7 @@
 
   .companyInfo{
       color: white;
-      padding: 1rem;
+      padding: .5rem;
   }
 
   .projectItemContainer:hover .companyDetails{
