--- a/src/components/Projects/PersonalProjects/PersonalProjects.scss
+++ b/src/components/Projects/PersonalProjects/PersonalProjects.scss
@@ -1,7 +1,7 @@
 @import "../../../constants/Variables.scss";
 
 .appBar {
-    background-color: $primaryColor;
+    background-color: white;
     color:black;
  
 }
@@ -11,13 +11,14 @@
 }
 
 .tabs {
-    flex-grow: 1;
     width: 90vw;
     margin: 0 auto;
-    background-color: transparent;
-    outline: none;
+    border: 1px solid #ccc;
+    border-bottom-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+    margin-bottom: 2rem;
     @media (min-width: $breakpoint-md) {
-        width: 60vw;
+        width: 70vw;
     }
 }
 
