--- a/src/components/Projects/PersonalProjects/PersonalProjects.scss
+++ b/src/components/Projects/PersonalProjects/PersonalProjects.scss
@@ -1,32 +1,76 @@
 @import "../../../constants/Variables.scss";
 
-.appBar {
-    background-color: white;
-    color:black;
- 
+.search-input {
+    display: flex;
+    margin: auto;
+    margin-bottom: 1rem;
+    width: 70%;
+    border: none;
+    border-bottom: 1px solid black;
+    background-color: transparent;
 }
 
-.appBar:focus{
+.search-input:focus {
     outline: none;
 }
 
-.tabs {
-    width: 90vw;
-    margin: 0 auto;
-    border: 1px solid #ccc;
-    border-bottom-left-radius: 2rem;
-    border-bottom-right-radius: 2rem;
-    margin-bottom: 2rem;
-    @media (min-width: $breakpoint-md) {
-        width: 70vw;
+.form__group {
+    position: relative;
+    margin: auto;
+    margin-top: -4rem;
+    margin-bottom: 1rem;
+    width: 70%;
+}
+
+.form__field {
+    font-family: inherit;
+    width: 100%;
+    border: 0;
+    border-bottom: 1px solid black;
+    outline: 0;
+    font-size: 1.3rem;
+    color: black;
+    padding: 7px 0;
+    background: transparent;
+    transition: border-color 0.2s;
+    margin-bottom: 1rem;
+
+    &::placeholder {
+        color: transparent;
+    }
+
+    &:placeholder-shown ~ .form__label {
+        font-size: 1.3rem;
+        top: 10px;
     }
 }
 
-.tabTitle span{
-    font-size: 1.3rem;
+.form__label {
+    position: absolute;
+    top: 0;
+    display: block;
+    transition: 0.2s;
+    font-size: 0.5rem;
+    color: black;
 }
 
-//override Material UI tab wrapper font
-.MuiTab-wrapper {
-    font-family: $ubuntuFont;
+.form__field:focus {
+    ~ .form__label {
+        position: absolute;
+        top: -15px;
+        display: block;
+        transition: 0.2s;
+        font-size: 1rem;
+        color: black;
+        font-weight: 700;
+    }
+    padding-bottom: 6px;
+    font-weight: 700;
+    border-width: 1px;
+    border-image-slice: 1;
+}
+
+.card-deck {
+    justify-content: center;
+    margin-bottom: 1rem;
 }
