--- a/src/components/Projects/PersonalProjects/PersonalProjects.scss
+++ b/src/components/Projects/PersonalProjects/PersonalProjects.scss
@@ -1,18 +1,5 @@
 @import "../../../constants/Variables.scss";
 
-.search-input {
-    display: flex;
-    margin: auto;
-    margin-bottom: 1rem;
-    width: 70%;
-    border: none;
-    border-bottom: 1px solid black;
-    background-color: transparent;
-}
-
-.search-input:focus {
-    outline: none;
-}
 
 .form__group {
     position: relative;
@@ -23,7 +10,7 @@
 }
 
 .form__field {
-    font-family: inherit;
+    font-family: $ubuntuFont;
     width: 100%;
     border: 0;
     border-bottom: 1px solid black;
@@ -41,7 +28,8 @@
 
     &:placeholder-shown ~ .form__label {
         font-size: 1.3rem;
-        top: 10px;
+        cursor: text;
+        top: 20px;
     }
 }
 
@@ -51,6 +39,7 @@
     display: block;
     transition: 0.2s;
     font-size: 0.5rem;
+    font-family: $ubuntuFont;
     color: black;
 }
 
@@ -61,6 +50,7 @@
         display: block;
         transition: 0.2s;
         font-size: 1rem;
+        font-family: $ubuntuFont;
         color: black;
         font-weight: 700;
     }
