--- a/src/components/SectionHeader/SectionHeader.css
+++ b/src/components/SectionHeader/SectionHeader.css
@@ -18,6 +18,12 @@
   }
 }
 
+@media (max-height: 700px) {
+  .sectionContainer {
+    height: 75vh;
+  }
+}
+
 .sectionContent {
   width: 70%;
   height: 100%;
