--- a/src/components/Services/ServicesColumn/ServicesColumn.css
+++ b/src/components/Services/ServicesColumn/ServicesColumn.css
@@ -52,6 +52,13 @@
 
 .description {
   margin-bottom: 3rem;
+  height: 4.5rem;
+}
+
+@media (min-width: 1200px) {
+  .description {
+    height: 12rem;
+  }
 }
 
 .hrStyle {
@@ -59,9 +66,29 @@
   height: 1px;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0)), color-stop(rgba(0, 0, 0, 0.75)), to(rgba(0, 0, 0, 0)));
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .quote {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   font-size: 1rem;
 }
 /*# sourceMappingURL=ServicesColumn.css.map */
