portfolio redesign old work

--- a/src/components/Projects/PersonalProjects/PersonalProjectItems/PersonalProjectItemCard/PersonalProjectItemCard.css
+++ b/src/components/Projects/PersonalProjects/PersonalProjectItems/PersonalProjectItemCard/PersonalProjectItemCard.css
@@ -19,4 +19,8 @@
   text-transform: capitalize;
   color: #a9a9a9;
 }
+
+.imgType {
+  width: 3rem;
+}
 /*# sourceMappingURL=PersonalProjectItemCard.css.map */
