--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,22 @@
 @import "./constants/Variables.scss";
 @import "~bootstrap/scss/bootstrap";
+
+// Portfolio container, replaces bootstrap
+body {
+    font-family: $ralewayFont !important;
+}
+.portfolio-container {
+    max-width: 87.5%;
+    margin-left: auto;
+    margin-right: auto;
+
+    @media only screen and (min-width: $breakpoint-md){
+        max-width: 692px;
+    }
+
+    @media only screen and (min-width: $breakpoint-lg){
+        max-width: 980px;
+    }
+
+    
+}
