--- a/src/components/Navigation/Toolbar/Toolbar.scss
+++ b/src/components/Navigation/Toolbar/Toolbar.scss
@@ -1,28 +1,51 @@
-@import '../../../constants/Variables.scss';
+@import "../../../constants/Variables.scss";
 
-#Toolbar {
-    height: 100px;
+.nav-bar {
+    height: 75px;
     width: 100%;
+    background-color: black;
     position: sticky;
     top: 0;
-    left: 0;    
+    left: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     z-index: 90;
-    @media (max-width: 500px){
-        height: 150px;
-        display: block;
-        text-align: center;
+    @media only screen and (min-width: $breakpoint-md) {
+        height: 100px;
+    }
+}
+.nav-main {
+    margin: auto;
+}
+
+.nav-mobile-main {
+    background-color: black;
+    position: sticky;
+    top: 75px;
+    z-index: 90;
+    border-top: 1px solid rgba(255, 255, 255, 0.24);
+    @media only screen and (min-width: $breakpoint-md) {
+        display: none;
     }
 }
 
-.Logo, .socialIcons {
-    height: 80%;
-    color: red;
-    @media(max-width: 500px){
-        height: 40%;
+.nav-toggler {
+    width: 48px;
+    height: 50px;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px 20px 10px 0;
+    cursor: pointer;
+    margin: auto 0;
+    div {
+        width: 90%;
+        height: 1px;
+        background-color: #fff;
     }
-}
-#Toolbar nav {
-    height: 100%;
+
+    @media only screen and (min-width: $breakpoint-md) {
+        display: none;
+    }
 }
