--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,97 +1,61 @@
 @import "../../constants/Variables.scss";
 
-.heroContainer{
-    height: 90vh;
-    display: flex;
-    // justify-content: flex-start;
-    flex-direction: column;
-    text-align: center;
-    font-family: $ubuntuFont;
-    z-index: -100;
-    margin-bottom: -1rem;
-    @media (max-width: 500px){
-        height: 33vh !important;
-        margin-bottom: -0.5rem;
-    }
-    @media (min-width: 501px) and (max-width: 900px){
-        height: 43vh;
-        margin-bottom: -0.5rem;
-    }
-    @media (min-width: 901px) and (max-width: 1180px){
-        height: 78vh;
-    }
-    @media(width: 1024px){
-        height: 60vh;
-    }
-    @media(max-height: 400px) and (max-width: 900px){
-        height: 60vh;
-    }
-}
+.heroContainer {
+    height: calc(100vh - 75px);
+    background-color: black;
 
-.heroText{
-    position: absolute;
-    width: 80vw;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    @media (max-width: 650px){
-        top: 40%;
-       // margin-top: -6rem;
-    }
-    @media (min-width: 650px) and (max-width: 900px){
-        top: 40%;
-    }
-    @media (min-width: 901px) and (max-width: 1024px){
-        top: 40%;
-    }
-    
-}
-.heroText p, .heroText span {
-    font-size: 40px;
+    .hero-contents {
+        display: grid;
+        height: 100%;
+        grid-template-columns: 1fr;
+        row-gap: 15px;
 
-    @media (max-width: 900px){
-        font-size: 20px;
-    }
-    @media (min-width: 901px) and (max-width: 1024px){
-        font-size: 30px;
-    }
-}
+        @media only screen and (min-width: $breakpoint-md) {
+            grid-template-columns: 1fr 1fr;
+        }
 
-.heroText span{
-    background: -webkit-linear-gradient($primaryColor, $accentColor);
-    background-clip: none;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
+        .hero-text {
+            margin: auto 0;
+            color: white;
+            font-weight: 600;
 
-.bannerImgContainer{
-    position: relative;
-    background: url(../../assets/images/bannerImage.png) no-repeat center;
-    background-size: contain;
-    background-position-y: top;
-    background-repeat: none;
-    overflow: hidden;
-    height: 100%;
-    width: 100%;
-    margin: 5px;
-    @media(max-width: 525px){
-        height: 42vh;
+            .hero-text-eyebrow {
+                font-size: 30px;
+            }
+            .hero-text-heading {
+                font-size: 45px;
+                font-weight: 700;
+            }
+            .hero-text-job {
+                font-size: 18px;
+            }
+        }
+
+        .hero-image-container {
+            max-height: 300px;
+            @media only screen and (min-width: $breakpoint-md) {
+                max-height: calc(100vh - 75px);
+            }
+            .hero-image {
+                width: 100%;
+                height: 100%;
+            }
+        }
     }
-
 }
 
 .react-rotating-text-cursor {
-    animation: blinking-cursor 0.8s cubic-bezier(0.99, 0.01, 0.01, 0.99) 0s infinite; 
-  }
-  
-  @keyframes blinking-cursor {
+    animation: blinking-cursor 0.8s cubic-bezier(0.99, 0.01, 0.01, 0.99) 0s infinite;
+}
+
+@keyframes blinking-cursor {
     0% {
-      opacity: 0;
+        opacity: 0;
     }
     50% {
-      opacity: 1;
+        opacity: 1;
     }
     100% {
-      opacity: 0;
+        opacity: 0;
     }
-  }
+}
