--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -33,6 +33,11 @@
             .hero-text-job {
                 font-size: 18px;
             }
+
+            .hero-social-icon {
+                font-size: 24px;
+                padding-right: 2rem;
+            }
         }
 
         .hero-image-container {
