--- a/src/components/SectionHeader/SectionHeader.scss
+++ b/src/components/SectionHeader/SectionHeader.scss
@@ -1,41 +1,21 @@
-@import '../../constants//Variables.scss';
+@import "../../constants/Variables.scss";
 
-.sectionContainer{
-    width: 100%;
-    height: 55vh;
-    background-image: linear-gradient(to top left, $primaryColor, $secondaryColor);
-    @media(max-width: 600px) and (max-height: 600px){
-        height: 100vh;
-    }
-    @media (max-width: 450px){
-        height: 65vh;
-    }
-    @media(max-height: 700px){
-        height: 75vh; 
-    }
-}
-
-.sectionContent{
-    width: 70%;
-    height: 100%;
-    margin: 0 auto;
-    display: flex;
+.section-header-content {
     text-align: center;
-    flex-direction: column;
-    justify-content: center;
-    font-family: $ubuntuFont;
-}
-
-h1{
-    font-size: 50px;
-    @media (max-width: 900px){
-        font-size: 30px;
+    .section-header-eyebrow {
+        text-transform: uppercase;
+        font-weight: 600;
+        color: $grayColor;
     }
-}
 
-p{
-    font-size: 20px;
-    @media (max-width: 900px){
-        font-size: 15px;
+    .section-header-heading {
+        font-size: 50px;
+        font-weight: 700;
+        line-height: 50px;
+    }
+
+    .section-header-body {
+        max-width: 450px;
+        margin: 0 auto;
     }
 }
