--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,25 +1,36 @@
-@import '../../constants//Variables.scss';
+@import "../../constants//Variables.scss";
 
-.footerContainer{
-    width: 100%;
+.footer-content {
     text-align: center;
-    border-top: 2px solid $primaryColor;
-}
+    background-color: black;
+    color: white;
+    padding: 1rem 0;
 
-.logoContainer{
-    display: flex;
-    justify-content: center;
-}
-.taglineContainer{
-    padding: 1rem;
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    justify-content: flex-end;
-    font-family: $ubuntuFont;
-}
+    .logoContainer {
+        display: flex;
+        justify-content: center;
+    }
 
-.footerSubNotes{
-    font-size: 14px;
-    font-family: $ubuntuFont;
+    .social-icons-container {
+        width: 150px;
+        display: flex;
+        justify-content: space-between;
+        margin: 0 auto;
+
+        .social-icon {
+            font-size: 24px;
+            padding-right: 2rem;
+            &:last-child {
+                padding-right: 0;
+            }
+        }
+    }
+
+    .footer-notes {
+        padding-top: 0.5rem;
+
+        .footerSubNotes {
+            font-size: 14px;
+        }
+    }
 }
